--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="experience-detail-container">
             <div class="about-containers">
                 <div class="details-container">
-                    <h2 class="experience-sub-title">Frontend Developer</h2>
+                    <h2 class="experience-sub-title">Frontend Development</h2>
                     <div class="article-container">
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
@@ -167,7 +167,7 @@
                     <div class="article-container">
                         <img src="./assets/project-1.png" alt="Project 1" class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Project One</h2>
+                    <h2 class="experience-sub-title project-title">Join</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
                             onclick="location.href='https://github.com/simonbrost/JOIN'">
@@ -183,7 +183,7 @@
                     <div class="article-container">
                         <img src="./assets/project-2.png" alt="Project 2" class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Project Two</h2>
+                    <h2 class="experience-sub-title project-title">El Pollo Loco</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
                             onclick="location.href='https://github.com/simonbrost/El-Pollo-Loco'">
@@ -199,7 +199,7 @@
                     <div class="article-container">
                         <img src="./assets/project-3.png" alt="Project 3" class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Project Three</h2>
+                    <h2 class="experience-sub-title project-title">Pokedex</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
                             onclick="location.href='https://github.com/simonbrost/Pokedex'">
