favicon experience darkText

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaqueries.css">
     <script defer src="script.js"></script>
+    <link rel="icon" href="assets/SB-favicon.png" type="image/png">
 </head>
 
 <body>
@@ -67,9 +68,9 @@
                 </div>
 
                 <div id="socials-container">
-                    <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon"
+                    <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon socials"
                         onclick="location.href='https://www.linkedin.com/in/simon-brost-194647232/'">
-                    <img src="./assets/github.png" alt="My Github profile" class="icon"
+                    <img src="./assets/github.png" alt="My Github profile" class="icon socials"
                         onclick="location.href='https://github.com/simonbrost'">
                 </div>
 
@@ -99,13 +100,20 @@
                 </div>
                 <div class="text-container">
                     <p>
-                        I am a 30-year-old Front End Developer residing in the rural village of Bockfließ, Niederösterreich, just a stone's throw away from the vibrant city of Vienna. 
-                        My journey into the realm of technology began in my childhood, fueled by an innate fascination with all things technical.
-                        With a solid foundation in a pedagogical background, I've seamlessly transitioned my passion for education into a fulfilling career in software development.
-                        Motivated by the desire to turn my hobby into a profession, I independently financed my education to embark on this exciting journey.
-                        As a Front End Developer, I infuse my work with a thirst for knowledge, communicative prowess, unwavering ambition, and a collaborative spirit. 
-                        Beyond the lines of code, I am dedicated to creating visually appealing and user-friendly digital experiences that make a lasting impression. 
-                        My diverse experiences, coupled with my commitment to ongoing learning, contribute to my ability to approach projects with both creativity and technical acumen.
+                        I am a 30-year-old Front End Developer residing in the rural village of Bockfließ,
+                        Niederösterreich, just a stone's throw away from the vibrant city of Vienna.
+                        My journey into the realm of technology began in my childhood, fueled by an innate fascination
+                        with all things technical. <br><br>
+                        With a solid foundation in a pedagogical background, I've seamlessly transitioned my passion for
+                        education into a fulfilling career in software development
+                        Motivated by the desire to turn my hobby into a profession, I independently financed my
+                        education to embark on this exciting journey. <br><br>
+                        As a Front End Developer, I infuse my work with a thirst for knowledge, communicative prowess,
+                        unwavering ambition, and a collaborative spirit.
+                        Beyond the lines of code, I am dedicated to creating visually appealing and user-friendly
+                        digital experiences that make a lasting impression.
+                        My diverse experiences, coupled with my commitment to ongoing learning, contribute to my ability
+                        to approach projects with both creativity and technical acumen.
                     </p>
                 </div>
             </div>
@@ -121,41 +129,69 @@
                 <div class="details-container">
                     <h2 class="experience-sub-title">Frontend Development</h2>
                     <div class="article-container">
-                        <article>
-                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
-                            <div>
-                                <h3>HTML</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
-                            <div>
-                                <h3>CSS</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
-                            <div>
-                                <h3>JavaScript</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
-                            <div>
-                                <h3>Bootstrap</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
-                            <div>
-                                <h3>Angular</h3>
-                                <p>Beginner</p>
-                            </div>
-                        </article>
+                        <div>
+                            <article>
+                                <div class="dev-icons">
+                                    <img
+                                        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
+                                </div>
+                                <div class="dev-lvl">
+                                    <h3>HTML</h3>
+                                    <p>Advanced</p>
+                                </div>
+                            </article>
+                            <article>
+                                <div class="dev-icons">
+                                    <img
+                                        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
+                                </div>
+                                <div class="dev-lvl">
+                                    <h3>CSS</h3>
+                                    <p>Advanced</p>
+                                </div>
+                            </article>
+                            <article>
+                                <div class="dev-icons">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
+                                </div>
+                                <div class="dev-lvl">
+                                    <h3>JavaScript</h3>
+                                    <p>Intermediate</p>
+                                </div>
+                            </article>
+                        </div>
+                        <div>
+                            <article>
+                                <div class="dev-icons">
+                                    <img
+                                        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" />
+                                </div>
+                                <div class="dev-lvl">
+                                    <h3>Bootstrap</h3>
+                                    <p>Beginner</p>
+                                </div>
+                            </article>
+                            <article>
+                                <div class="dev-icons">
+                                    <img
+                                        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg" />
+                                </div>
+                                <div class="dev-lvl">
+                                    <h3>Angular</h3>
+                                    <p>Beginner</p>
+                                </div>
+                            </article>
+                            <article>
+                                <div class="dev-icons">
+                                    <img
+                                        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" />
+                                </div>
+                                <div class="dev-lvl">
+                                    <h3>Github</h3>
+                                    <p>Beginner</p>
+                                </div>
+                            </article>
+                        </div>
                     </div>
                 </div>
             </div>
