--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
                             </article>
                             <article>
                                 <div class="dev-icons">
-                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
+                                    <img
+                                        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
                                 </div>
                                 <div class="dev-lvl">
                                     <h3>JavaScript</h3>
@@ -214,9 +215,9 @@
                             onclick="location.href='https://github.com/simonbrost/JOIN'">
                             Github
                         </button>
-                        <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/simonbrost/JOIN'">
-                            Live Demo
+                        <button class="btn btn-color-2 project-btn" 
+                            onclick="location.href=''">
+                            Work in Progress
                         </button>
                     </div>
                 </div>
@@ -231,7 +232,7 @@
                             Github
                         </button>
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/simonbrost/El-Pollo-Loco'">
+                            onclick="location.href='https://simon-brost.developerakademie.net/elPolloLoco/index.html'">
                             Live Demo
                         </button>
                     </div>
@@ -246,9 +247,8 @@
                             onclick="location.href='https://github.com/simonbrost/Pokedex'">
                             Github
                         </button>
-                        <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/simonbrost/Pokedex'">
-                            Live Demo
+                        <button class="btn btn-color-2 project-btn" onclick="location.href=''">
+                            Work in Progress
                         </button>
                     </div>
                 </div>
